[ ] ANALIZAR PARA FUTURO > UI realiza 2 peticiones a 2 endpoint con la solicitud de ruta: route_request y context_reqest. RE ya no llamaría a GE, serían asíncronos. Ambos mandarían los datos a CA y GE devolvería los datos de contexto por el endpoint.
@startuml
!include docs/uml/theme.puml
skinparam linetype ortho
skinparam shadowing false
skinparam defaultTextAlignment center
skinparam defaultFontSize 12
skinparam ArrowFontSize 11
skinparam nodesep 80
skinparam ranksep 120
allowmixing

left to right direction

package "SafeNav internal interfaces" as Internal {

  ' === External UI (Client) ===
  component "User Interface System" <<system>> as UISys {
    component "User Interface" as UI
  }

  interface "I_HTTP_Routes" as IHTTP
  IHTTP : + create_route(request : RouteRequest) : RouteResponse
  UI -down- IHTTP : HTTP/JSON


  ' === SafeNav Core ===
  component "SafeNav Core" <<system>> as Core {

    ' --- API Layer ---
    component "API Layer\n(HTTP Controller)" as API
    IHTTP -- API : implements


    ' --- Routing Engine ---
    component "Routing Engine\n(RE)" as RE

    interface "I_RoutingService" as IRoute
    IRoute : + calculate_routes(request : RouteRequest) : RouteCandidates

    API --> IRoute : uses
    IRoute -- RE : implements


    ' --- Geospatial Engine ---
    component "Geospatial Engine\n(GE)" as GE

    interface "I_GeospatialService" as IGeo
    IGeo : + getRoutesContext(routes : RouteCandidates) : ContextDescription

    API --> IGeo : uses
    IGeo -- GE : implements


    ' --- Context Analyzer ---
    component "Context Analyzer\n(CA)" as CA

    interface "I_ContextService" as IContext
    IContext : + evaluateRoutes(routes : RouteCandidates,\n context : ContextDescription) : RouteScores

    API --> IContext : uses
    IContext -- CA : implements


    ' --- Data Management ---
    component "Data Management\n(DM)" as DM

    interface "I_RoadGraphAccess" as IGraph
    IGraph : + getGraphData() : GraphData

    interface "I_ContextDataAccess" as IData
    IData : + getWeatherData(request : WeatherRequest) : WeatherData
    IData : + getUrbanData(request : UrbanDataRequest) : UrbanData

    RE --> IGraph : uses
    GE --> IData : uses

    IGraph -- DM : implements
    IData -- DM : implements
  }
}


' === External Data Sources ===
package "External Data Sources" as External {
  top to bottom direction

  component "Map Services\n(MapAPI - OpenStreetMap)" <<external>> as MapAPI
  component "Meteo Sources\n(MeteoAPI)" <<external>> as MeteoAPI
  component "Local Open Data\n(OpenDataAPI)" <<external>> as OpenDataAPI
}


' === External interface used by UI ===
interface "I_MapDataAccess" as IMapData
IMapData : + fetchMapData(area : Area) : MapData

UI -- IMapData : implements\n(through Leaflet)
IMapData -- MapAPI : E1: Map data


' === External interfaces implemented by DM ===
interface "I_MeteoDataAccess" as IMeteoData
IMeteoData : + fetchWeatherData(area : Area, time : DateTime) : WeatherData

interface "I_OpenDataAccess" as IOpenData
IOpenData : + fetchUrbanData(area : Area, dataType : String) : UrbanData

DM -- IMeteoData : implements
DM -- IOpenData : implements

IMeteoData -- MeteoAPI : E2: Weather data
IOpenData -- OpenDataAPI : E3: Urban data

@enduml
